src/styles/project_detail.css
/**
 *  Angular Animate Slideshow - Custom Theme
 *  Author: Kevin Chan (http://chessmasterhong.github.io)
 *  Inspired by bxSlider (http://bxslider.com)
 */

.slider-container {
    padding: 0 0 480px;
    position: relative;
}

.slider-container .slide.ng-hide-add,
.slider-container .slide.ng-hide-remove {
    display: block !important;
    -webkit-transition: 0.5s linear all;
    -moz-transition: 0.5s linear all;
    -o-transition: 0.5s linear all;
    transition: 0.5s linear all;
}

.slider-container .slide.ng-hide-add.ng-hide-add-active, .slider-container .slide.ng-hide-remove { opacity: 0; }
.slider-container .slide.ng-hide-add, .slider-container .slide.ng-hide-remove.ng-hide-remove-active { opacity: 1; }

.slider-container .slide {
    left: 0;
    position: absolute;
    text-align: center;
    top: 0;
    width: 100%;
}

.slider-container .slide img {
    max-height: 440px;
    max-width: 100%;
}

.slider-container .slide .caption {
    background: #d0d0d0;
    font-size: small;
    padding: 5px 15px;
}

.slider-container .slider .arrow {
    font-size: 32px;
    opacity: 0;
    position: absolute;
    text-align: center;
    top: 204px;
    transition: opacity .25s ease-in-out;
    -webkit-transition: opacity .25s ease-in-out;
    -moz-transition: opacity .25s ease-in-out;
    -o-transition: opacity .25s ease-in-out;
}

.slider-container .slider:hover .arrow { opacity: 1; }

.slider-container .slider .arrow_left { left: 5px; }
.slider-container .slider .arrow_right { right: 5px; }

.slider-container .pager {
    position: relative;
    text-align: center;
    top: 490px;
    width: 100%;
}

.slider-container .pager .pager-item {
    box-shadow: 2px 2px 4px 2px #999999;
    -moz-box-shadow: 2px 2px 4px 2px #999999;
    -webkit-box-shadow: 2px 2px 4px 2px #999999;
    display: inline-block;
    height: 100px;
    margin: 4px;
    overflow: hidden;
    width: 100px;
}

.slider-container .pager .pager-item:hover {
    border: 2px solid #222222;
    margin: 2px;
}

.slider-container .pager .pager-item img {
    height: 100px;
}

@media only screen and (max-width: 685px) {
    .slider-container {
        padding-bottom: 90%;
    }

    .slider-container .pager {
        display: none;
    }
}

